--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@radix-icons/vue": "^1.0.0",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "pinia": "^2.2.4",
+    "radix-vue": "^1.9.7",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
     "vue-toastification": "^1.7.14"
@@ -33,6 +39,7 @@
     "@vue/eslint-config-typescript": "^14.1.1",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.20",
     "cypress": "^13.15.0",
     "eslint": "^9.13.0",
     "eslint-plugin-cypress": "^4.0.0",
@@ -41,6 +48,7 @@
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
     "start-server-and-test": "^2.0.8",
+    "tailwindcss": "^3.4.14",
     "typescript": "~5.6.0",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.3",
