--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-vue-next": "^0.453.0",
     "pinia": "^2.2.4",
     "pinia-plugin-persistedstate": "^4.1.2",
@@ -30,7 +31,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
-    "vue-toastification": "^1.7.14"
+    "vue-toastification": "^1.7.14",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
