--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lucide-vue": "^0.453.0",
     "lucide-vue-next": "^0.453.0",
     "pinia": "^2.2.4",
     "pinia-plugin-persistedstate": "^4.1.2",
