feat: :adhesive_bandage: forms for login and register implemented

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
   "compilerOptions": {
     "module": "NodeNext",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     }
   }
 }
