--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "@formkit/addons": "^1.6.7",
+    "@formkit/core": "^1.6.7",
     "@formkit/i18n": "^1.6.7",
+    "@formkit/themes": "^1.6.7",
     "@formkit/vue": "^1.6.7",
     "@formkit/zod": "^1.6.7",
     "@iconify/vue": "^4.1.2",
@@ -44,6 +46,7 @@
   },
   "devDependencies": {
     "@iconify-json/radix-icons": "^1.2.1",
+    "@iconify/vue": "^4.1.2",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20.17.0",
