--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,10 @@
 version: 2
 updates:
-  - package-ecosystem: 'pnpm'
-    directory: '/'
+  - package-ecosystem: "pnpm"
+    directory: "/"
     schedule:
-      interval: 'weekly'
+      interval: "weekly"
+    commit-message:
+      prefix: "deps"
+      include: "scope" 
     open-pull-requests-limit: 10
