--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,40 +17,22 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: npm ci
 
       - name: Type checking
-        run: pnpm type-check
+        run: npm run type-check --if-present
 
       - name: Lint check
-        run: pnpm lint
+        run: npm run lint --if-present
 
       - name: Run unit tests
-        run: pnpm test:unit:test
+        run: npm run test:unit:test --if-present
 
       - name: Run e2e tests
         uses: cypress-io/github-action@v6
         with:
-          build: pnpm build
-          start: pnpm preview
+          build: npm run build --if-present
+          start: npm run preview --if-present
           wait-on: http://localhost:4173
-          command: pnpm test:e2e:test
+          command: npm run test:e2e:test --if-present
