--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,12 +27,4 @@ jobs:
         run: npm run lint --if-present
 
       - name: Run unit tests
-        run: npm run test:unit:test --if-present
-
-      - name: Run e2e tests
-        uses: cypress-io/github-action@v6
-        with:
-          build: npm run build --if-present
-          start: npm run preview --if-present
-          wait-on: http://localhost:4173
-          command: npm run test:e2e:test --if-present
+        run: npm run test:unit --if-present
