tests for use-cars created

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,6 +9,7 @@
     "src/lib",
     "src/router",
     "src/stores",
+    "src/shared/**/*",
   ],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
