--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,11 @@ coverage
 .env.production
 .env.test
 .env
+
+# Archivos de configuración generados por TypeScript
+vite.config.js
+vite.config.d.ts
+vitest.config.js
+vitest.config.d.ts
+cypress.config.js
+cypress.config.d.ts
