--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -5,7 +5,7 @@
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
-
+    "noEmit": true,
     "lib": ["ES2023", "DOM"],
     "types": ["node", "jsdom"]
   }
