hotfix: dependabot limits changed, interval set to mothly

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,8 +3,8 @@ updates:
   - package-ecosystem: 'npm'
     directory: '/'
     schedule:
-      interval: 'weekly'
+      interval: 'monthly'
     commit-message:
       prefix: 'deps'
       include: 'scope'
-    open-pull-requests-limit: 10
+    open-pull-requests-limit: 5
