--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@iconify/vue": "^4.1.2",
     "@internationalized/date": "^3.5.6",
     "@radix-icons/vue": "^1.0.0",
+    "@tanstack/vue-table": "^8.20.5",
     "@vee-validate/zod": "^4.14.7",
     "@vue/shared": "^3.5.12",
     "@vueuse/core": "^11.1.0",
