--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -4,6 +4,9 @@
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.vue"],
   "compilerOptions": {
     "composite": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
     "noEmit": true,
     "lib": ["ES2023", "DOM"],
